two visual improvements - adds style to scroller bars to make them look more modern - fixes nav scoller bar going behind .sidenav

--- a/styles/styles-dark.css
+++ b/styles/styles-dark.css
@@ -55,3 +55,7 @@ ul.sidenav.sidenav-fixed li.subsub_index.active{background-color:#555 !important
 
 /* inputs */
 label{color:#ccc;}
+
+/* custom scrollbars */
+::-webkit-scrollbar-track{background:#222222; border-radius: 10px;}
+* {scrollbar-width: thin; scrollbar-color: var(--theme-color) #222222;}
